feat: Unsafe warning and restriction countermeasures